# gitlater

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
.gitlater/: config.toml  holidays.txt
src/gitlater/: cli.py  config.py  core.py  holidays.py  init.py
tests/: test_cli.py  test_config.py  test_core.py  test_holidays.py  test_init.py
